Actualizacion paleta de colores | Boton Editar Perfil | Banner en vista Inicio .

--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,19 @@
-<!DOCTYPE html>
-<html lang="es">
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-<link rel="icon" type="image/png" href="https://images.icon-icons.com/4313/PNG/512/message_send_paper_plane_chat_icon_267397.png" />
-
+    <link rel="icon" type="image/png" href="https://images.icon-icons.com/4313/PNG/512/message_send_paper_plane_chat_icon_267397.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FLORTE - Plataforma Social Educativa</title>
-    <meta name="description" content="FLORTE es una plataforma social educativa donde los estudiantes pueden conectar, aprender y crecer juntos." />
+    <title>FLORTE - Red Profesional SENA</title>
+    <meta name="description" content="Conecta, comparte y haz crecer tu red profesional en FLORTE" />
+    <meta name="author" content="FLORTE" />
+
+    <meta property="og:title" content="FLORTE - Red Profesional SENA" />
+    <meta property="og:description" content="Conecta, comparte y haz crecer tu red profesional en FLORTE" />
+    <meta property="og:type" content="website" />
+
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
